<resources>
    <string name="app_name" translatable="false">InStudy</string>
    <string name="title_password">Password</string>
    <string name="title_error">Error</string>
    <string name="bt_sign_in">Sign In</string>
    <string name="bt_sign_up">Sign Up</string>
    <string name="title_email" translatable="false">E-mail</string>
    <string name="title_sign_up_student">Sign Up as Student</string>
    <string name="title_sign_up_school">Sign Up as School</string>
    <string name="title_as_student">I look for school</string>
    <string name="title_as_school">I suggest courses</string>
    <string name="title_confirm_password">Confirm</string>
    <string name="menu_as_student">as Student</string>
    <string name="menu_as_school">as School</string>
    <string name="title_sign_in">Sign In</string>
    <string name="title_name">Name</string>
    <string name="title_surname">Surname</string>
    <string name="title_phone">Phone</string>
    <string name="title_organization">Organization</string>
    <string name="error_invalid_email">Invalid email.</string>
    <string name="error_unmatched_password">Password should contain at least 1 uppercase character, 1 digit and be more 7 in length.</string>
    <string name="error_invalid_repassword">Passwords do not equal.</string>
    <string name="error_counter_limit">Inadmissible length!</string>
    <string name="error_counter_minimum">Minimum 3 letters!</string>
    <string name="error_empty_text">Cannot be empty.</string>
    <string name="menu_card">Cards</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_chat">Chats</string>
    <string name="menu_query">Queries</string>
    <string name="notice_no_query">You have no queries.</string>
    <string name="notice_no_card">You have no cards.</string>
    <string name="notice_school_registration_assert">
        <![CDATA[
        <B>Note:</B> Registration as "school" will not assign you immediately. You must provide at least 1 document confirming your legal right to conduct education activities.
        ]]>
    </string>
    <string name="bt_add_file">Add a file</string>
    <string name="error_same_file_exists">Such a file is already attached.</string>
    <string name="menu_add_card">Add card</string>
    <string name="menu_delete_card">Delete</string>
    <string name="error_http_timeout">Network error. Response timed out. Try again.</string>
    <string name="error_http_connect">Network error. Unable to connect to server. Check you internet connection!</string>
    <string name="error_unexpected">Unexpected error. Try again.</string>
    <string name="status_card_draft">Draft</string>
    <string name="status_card_active">Active</string>
    <string name="status_card_expired">Expired</string>
    <string name="bt_create_card">Create</string>
    <string name="bt_save2draft_card">Save as draft</string>
    <string name="menu_refresh_card">Refresh</string>
    <string name="bt_save">Save</string>
    <string name="title_written_city">City where I look for</string>
    <string name="title_written_speciality">Speciality what I look for(optional)</string>
    <string name="title_written_faculty">Faculty what I look for(optional)</string>
    <string name="title_title">Title</string>
    <string name="title_written_comment">My comment(optional)</string>
    <string name="error_fill_fields">Empty fields!</string>
    <string name="bt_change_contact_information">Change contact information</string>
    <string name="bt_change_password">Change password</string>
    <string name="title_account">Account</string>
    <string name="bt_logout">Logout</string>
    <string name="title_security">Security</string>
    <string name="bt_update_password">Update password</string>
    <string name="bt_forgot_password">I forgot password</string>
    <string name="title_old_password">Old password</string>
    <string name="title_new_password">New password</string>
    <string name="notice_password_updated">Password updated successfully!</string>
    <string name="error_sign_in_invalid_login_or_pass">Error: Invalid login or password.</string>
    <string name="error_settings_invalid_password">Error: Invalid password.</string>
    <string name="title_query_email" translatable="false">Email: %1$s</string>
    <string name="title_contact_information">Contact information</string>
    <string name="title_query_organization">Organization: %1$s</string>
    <string name="notice_query_verified">Registration verified successfully!</string>
    <string name="title_query_information">Query information</string>
    <string name="title_query_created">Created: %1$s</string>
    <string name="title_query_props">Their props</string>
    <string name="intent_open_with">Open with…</string>
    <string name="bt_verify">Verify</string>
    <string name="bt_deny">Deny</string>
    <string name="alert_sure_verify_query_text">Are you sure to verify this query?</string>
    <string name="title_attention">Attention!</string>
    <string name="bt_ok" translatable="false">OK</string>
    <string name="bt_cancel">Cancel</string>
    <string name="error_cannot_verify_query">Unable verify query or this one already has been verified</string>
    <string name="alert_deny_comment">Denying comment(optional)</string>
    <string name="alert_sure_deny_query_text">Are you sure to deny this query?</string>
    <string name="error_cannot_deny_query">Unable deny query or this one already has been denied.</string>
    <string name="notice_query_denied">Registration denied successfully!</string>
    <string name="notice_school_no_card">We could not find any cards for you. Try filter your search.</string>
    <string name="menu_filter_card">Filter</string>
    <string name="menu_search_card">Search</string>
    <string name="title_card_information">Card details</string>
    <string name="title_showcard_phone">Phone: %1$s</string>
    <string name="title_showcard_fullname">Full name: %1$s %2$s</string>
    <string name="title_showcard_email" translatable="false">E-mail: %1$s</string>
    <string name="title_showcard_city">Sought city: %1$s</string>
    <string name="title_showcard_speciality">Speciality: %1$s</string>
    <string name="title_showcard_faculty">Faculty: %1$s</string>
    <string name="title_card_created">In search since: %1$s</string>
    <string name="title_filter_card_by">Filter cards by:</string>
    <string name="title_seekbar_count_card">Quantity of cards: %1$d</string>
    <string name="title_speciality">Speciality</string>
    <string name="title_faculty">Faculty</string>
    <string name="title_city">City</string>
    <string name="menu_filterby_title">by Title</string>
    <string name="menu_filterby_city">by City</string>
    <string name="menu_filterby_date">by Date</string>
    <string name="menu_sort_card">Sort</string>
    <string name="label_change_contacts">Change contact information</string>
    <string name="label_change_password">Change password</string>
    <string name="label_settings">Settings</string>
    <string name="title_change_name">Change name:</string>
    <string name="title_change_surname">Change surname:</string>
    <string name="switch_default_city">Set default city</string>
    <string name="title_default_city">My default city</string>
    <string name="title_location">Location</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_change_phone">Change phone:</string>
    <string name="notice_account_updated">Updated successfully!</string>
    <string name="menu_search_with_dots">Search…</string>
    <string name="alert_cancel_creating_card">Leave without save?</string>
    <string name="bt_dont_save">Do not save</string>
    <string name="title_not_indicated">Not indicated</string>
    <string name="bt_keep_draft">Keep in draft</string>
    <string name="bt_publish">Publish</string>
    <string name="bt_edit">Edit</string>
    <string name="error_organization_exist">Error: Such an organization already exists.</string>
    <string name="error_user_email_exist">Error: User with such email already exists.</string>
    <string name="error_phone_exist">Error: User with such a number phone already exists.</string>
    <string name="notice_student_registration_success">You have registered successfully! Now please verify your email address.</string>
    <string name="notice_school_registration_success">You have been registered successfully! Now please verify your email address and then await when InStudy will check your props.</string>
</resources>
