<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/appbar_search_card"
            android:enabled="true"
            android:title="@string/menu_search_card"
            android:icon="@drawable/ic_sharp_search_24"
            app:showAsAction="ifRoom"/>

    <item android:id="@+id/appbar_filter_card"
            android:enabled="true"
            android:title="@string/menu_filter_card"
            android:icon="@drawable/ic_sharp_filter_alt_24"
            app:showAsAction="ifRoom"/>

    <item android:id="@+id/appbar_sort_card"
            android:enabled="true"
            android:title="@string/menu_sort_card"
            android:icon="@drawable/ic_sharp_sort_24"
            app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/appbar_filterby_title"
                        android:title="@string/menu_filterby_title"
                        android:checked="true"/>

                <item android:id="@+id/appbar_filterby_city"
                        android:title="@string/menu_filterby_city"/>

                <item android:id="@+id/appbar_filterby_date"
                        android:title="@string/menu_filterby_date"/>
            </group>
        </menu>
    </item>
</menu>