<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUpSchoolFragment">
    
    <com.google.android.material.textview.MaterialTextView
            android:id="@+id/signup_school_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:textAlignment="center"
            android:fontFamily="sans-serif-medium"
            android:textSize="@dimen/title_text_size"
            android:text="@string/title_sign_up_school"/>

    <com.google.android.material.textview.MaterialTextView
            android:id="@+id/signup_school_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/signup_school_text"
            android:textAlignment="center"
            android:fontFamily="sans-serif-condensed-light"
            android:textSize="@dimen/title_text_smalldescription"
            android:text="@string/title_as_school"/>

    <!-- E-mail -->
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_school_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/signup_school_desc"
            android:layout_marginTop="@dimen/vertical_margin_login_in_activity">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_school_email_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:hint="@string/title_email"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Пароль -->
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_school_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/signup_school_email_input"
            android:layout_marginTop="@dimen/vertical_margin_login_in_activity">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_school_password_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:inputType="textPassword"
                android:hint="@string/title_password"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Подтверждение -->
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_school_repassword_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/signup_school_password_input"
            android:layout_marginTop="@dimen/vertical_margin_login_in_activity">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_school_repassword_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:inputType="textPassword"
                android:hint="@string/title_confirm_password"/>

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>