<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/verifying_query_container"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".VerifyingQueryActivity"
        android:paddingVertical="20dp">

    <com.google.android.material.textview.MaterialTextView
            android:id="@+id/verifying_query_contact_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingHorizontal="20dp"
            android:text="@string/title_contact_information"
            android:textSize="15sp"
            android:fontFamily="sans-serif-black"/>

    <LinearLayout
            android:id="@+id/verifying_query_contact_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/verifying_query_contact_title"
            android:layout_marginVertical="5dp"
            android:paddingHorizontal="25dp"
            android:paddingVertical="3dp"
            android:background="#FFFFFF"
            android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
                android:id="@+id/verifying_query_email_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_query_email"/>

        <com.google.android.material.textview.MaterialTextView
                android:id="@+id/verifying_query_organization_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/title_query_organization"/>

    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
            android:id="@+id/verifying_query_query_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/verifying_query_contact_container"
            android:layout_marginVertical="10dp"
            android:paddingHorizontal="20dp"
            android:text="@string/title_query_information"
            android:textSize="15sp"
            android:fontFamily="sans-serif-black"/>

    <LinearLayout
            android:id="@+id/verifying_query_query_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/verifying_query_query_title"
            android:layout_marginVertical="5dp"
            android:paddingHorizontal="25dp"
            android:paddingVertical="3dp"
            android:background="#FFFFFF"
            android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
                android:id="@+id/verifying_query_created_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_query_created"/>

    </LinearLayout>

    <com.skydoves.expandablelayout.ExpandableLayout
            android:id="@+id/verifying_query_expandable"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/verifying_query_query_container"
            app:layout_constraintBottom_toTopOf="@id/verifying_query_deny_button"
            android:layout_marginVertical="5dp"
            app:expandable_duration="300"
            app:expandable_isExpanded="false"
            app:expandable_parentLayout="@layout/verifying_props_parent_layout"
            app:expandable_secondLayout="@layout/verifying_props_second_layout"
            app:expandable_showSpinner="true"
            app:expandable_spinner="@drawable/ic_arrow_down"
            app:expandable_spinner_animate="true"
            app:expandable_spinner_gravity="end"
            app:expandable_spinner_color="@color/colorPrimaryDark"
            app:expandable_spinner_size="32dp"
            app:expandable_spinner_margin="14dp"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/verifying_query_verify_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="22dp"
            android:text="@string/bt_verify"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/verifying_query_deny_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/verifying_query_verify_button"
            android:layout_marginHorizontal="22dp"
            android:backgroundTint="@color/colorAlert"
            android:text="@string/bt_deny"/>

    <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="?android:attr/progressBarStyle"
            android:visibility="gone"
            android:elevation="1dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>