<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignInFragment">

    <TextView android:id="@+id/sign_in_text"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textAlignment="center"
              android:fontFamily="sans-serif-medium"
              android:textSize="@dimen/title_text_size"
              android:text="@string/bt_sign_in"/>

    <!-- Ввод электронной почты -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_in_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in_text"
        android:layout_marginVertical="@dimen/vertical_margin_login_in_activity"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_in_email_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:hint="@string/title_email"/>

    </com.google.android.material.textfield.TextInputLayout>
    
    <!-- Ввод пароля -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_in_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in_email_input">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_in_password_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:inputType="textPassword"
                android:hint="@string/title_password"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Разметка для кнопок -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/vertical_margin_login_in_activity"
        android:gravity="end"
        android:layout_below="@id/sign_in_password_input">

        <!-- Регистрации. Показывает два типа: студент, учитель -->
        <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_in_register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/bt_sign_up"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>

        <!-- Авторизация -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_in_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_sign_in"/>

    </LinearLayout>

</RelativeLayout>